--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -7,24 +7,13 @@ description:
 priority: 0.5
 ---
 
-Flying to Berlin was my first flight with Ryanair on this trip, and it was
-pretty much trouble free. It did seem absurd that they still mess about with
-unassigned seating, which makes the boarding process so much slower and
-inefficient than on normal airlines, and it means they play silly games not
-announcing which gate you need to be at until 15 minutes before it closes so you
-have the fun of running from one end of the airport to the other to catch your
-flight. I heard they're finally phasing it out; that cant happen soon enough
-IMO.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13575837835/in/set-72157643245435323" title="Alexanderplatz by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7329/13575837835_b631a6aafb_c.jpg" width="800" height="601" alt="Alexanderplatz S-Bahn Station"></a>
-
-<!-- more -->
-
 Once I'd gotten into Berlin and checked into my hostel I got in contact with my
 friend Erin, an American who I met in South Africa who lives in Berlin on a
 semi-regular basis. We arranged to meet up for dinner and she offered to give me
 an introductory tour of the city. It was pretty lucky timing as Erin was leaving
 Berlin for a month just a few days after I arrived.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13575837835/in/set-72157643245435323" title="Alexanderplatz by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7329/13575837835_b631a6aafb_c.jpg" width="800" height="601" alt="Alexanderplatz S-Bahn Station"></a>
 
 We  walked all around the city, past the museum island, Potsdamer Platz,
 Brandenburger Tor, The Jewish Memorial, and loads of other sites around the
@@ -34,10 +23,12 @@ perfect for the cold nights leading up to Christmas. It was lovely to see Erin
 again and it felt like a nice way to get to know the city being shown around by
 someone who obviously loves the place.
 
+<!-- more -->
+
 I feel a bit bad about having zero photos with Erin or the places we went to go
 with this part of the post, but at times while travelling I've been hit by
 "photo sorting fatigue", which leaves me in a state where I think to myself "if
-I don't take any photos I wont have to sort any more!", which leads to gaps like
+I don't take any photos I wont have to sort them!", which leads to gaps like
 we have here.
 
 We met up again the next day to go and visit Tempelhof Park, an old airfield
@@ -292,7 +283,7 @@ photography, old mechanical computers and televisions.
 <a href="http://www.flickr.com/photos/lucasthenomad/13567596055/in/set-72157643245435323" title="Wooden bike by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7077/13567596055_f5671ee900_c.jpg" width="800" height="601" alt="Wooden bike, totally hipster"></a>
 
 Some of the old televisions had Cathode Ray tubes so long that they would
-orienty them with the screen facing the ceiling, and then use a 45º mirror to
+orient them with the screen facing the ceiling, and then use a 45º mirror to
 flip the image so a sitting viewer could watch it. To think today there are
 2+ metre televisions that are only a few cm thick... The progress of technology
 is awesome!
@@ -326,7 +317,7 @@ with each room styled differently and quite uniquely. Much of it has been
 reconstructed since the war. It's funny, the place felt too old to be calling it
 the new museum.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13570806863/in/set-72157643245435323" title="More plundered loot by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13570806863_91ff2f0594_c.jpg" width="800" height="601" alt="More plundered loot"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/13570806863/in/set-72157643245435323" title="More plundered loot by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13570806863_91ff2f0594_c.jpg" width="800" height="601" alt="More plundered loot in the New Museum"></a>
 
 I also went to the Old Museum which looks majestic from the outside, but I felt
 the inside of the building lacked any real character and was rather dull and
@@ -361,147 +352,218 @@ There was a ramp spiralling up around the dome, with an audio guide that is
 automatically activated as you walk around, giving you a great (but hard to
 photograph) view of the city in all directions.
 
+I had hesitations about visiting the Checkpoint Charlie Museum, because the
+street outside makes the whole area feel like an awful tourist trap, but it
+turned out to be nothing of the sort and was way better than I expected.
 
-checkpoint charlie museum. way better than I expected. lots of intresting
-stories about escapes hidden in cars, welding machines, a pair of suitcases side
-by side, balloons, gliders. the musuem was actually huge, but i think the layout
-means most people miss half of it, I had the place to myself in that section.
+<a href="http://www.flickr.com/photos/lucasthenomad/13569107935/in/set-72157643245435323" title="Checkpoint Charlie looks like a tourist trap on the street by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7038/13569107935_690ccf05dc_c.jpg" width="800" height="450" alt="Checkpoint Charlie looks like a tourist trap on the street"></a>
+
+It contained lots of interesting stories about the many successful and
+unsuccessful attempts to escape from East Germany to flee to the west.  There
+were stories about escapes hidden in the modified engine bay cars, secret
+compartments in huge welding machines, one woman who hid in a pair of suitcases
+side by side on the luggage rack of a train, hot air balloons, gliders, even
+some submarine attempts in the Baltic sea. The museum was actually very large,
+but I think the layout means a lot of people miss half of it. I pretty much had
+the place to myself in that section.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13574369354/in/set-72157643245435323" title="Entering the American sector by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3707/13574369354_a88abda031_c.jpg" width="800" height="601" alt="Entering the American sector"></a>
 
-sachenhausen concentration camp, out at oranienburg. 2 km walk from the station
-in the literally freezing cold mist.
+One very cold a miserable day I went out to see Sachsenhausen concentration
+camp, out at Oranienburg. The camp was about a two kilometre walk from the
+station in literally freezing cold mist.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13574136123/in/set-72157643245435323" title="Sachsenhausen concentration camp by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5154/13574136123_5128f1e198_c.jpg" width="800" height="601" alt="Sachsenhausen concentration camp"></a>
 
-got the audio guide, found it to be another miss. very, very long winded, often
-going way off topic. also sort of out of date, as far as a historic sitecan be
-at least. mentions "hope to finish building by 2007", leaving me wondering if
-they finished or not. quite the cliff hanger
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13574950624/in/set-72157643245435323" title="Guard tower by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13574950624_3b90ef9ba6_c.jpg" width="601" height="800" alt="Guard tower"></a>
-
-
-camp used by the russian 45-50, lots of info but not very much good info to give
-the whole picture durion that time. lots of personal account but none of them
-tie together and I didn't get much of an idea what it was like.
+This camp had also been used by the Russians around 1945-50 after the war ended,
+although the use of the camp continued to be used to kill those who opposed the
+government after the war. There was lots of info about individual prisoners
+accounts and that sort of thing, but it was all fragments so I left without a
+very good picture of what things were like during that later period.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13574588603/in/set-72157643245435323" title="The part used by Russia after WWII by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2865/13574588603_d6129b1b7b_c.jpg" width="800" height="601" alt="The part used by Russia after WWII"></a>
 
-founations of the gas chambers and the neck shot room were stil there but the
-building were long gone.
+
+The foundations of the buildings containing the gas chambers and the oven were
+all that is left. This building also contained the neck-shot room, in which they
+would tell the prisoners they were going to measure their height against a tape
+measure on the wall, but then a person in the adjoining room would fire a shot
+through a slit in the wall straight into their neck, killing them. The Nazis
+were not nice people at all.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13574715373/in/set-72157643245435323" title="Ovens foundations by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3818/13574715373_5fa26d9d74_c.jpg" width="800" height="601" alt="Ovens foundations"></a>
 
-infirmary had mention of there being a brothel on site, females prisoners forced
-to work there, soldiers and selected prisoners used it as a reward
+The exhibition in the infirmary had mention of there being a brothel on site,
+where females prisoners were forced to work, being raped by soldiers and
+selected prisoners as a means of rewarding them. Really messed up stuff.
 
-frozen puddles everywhere
+<a href="http://www.flickr.com/photos/lucasthenomad/13574950624/in/set-72157643245435323" title="Guard tower by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13574950624_3b90ef9ba6_c.jpg" width="601" height="800" alt="Guard tower"></a>
+
+It was cold enough that most water on the ground had frozen solid, and the misty
+rain that started again as the sun was setting was awfully cold, but strangely
+appropriate for the venue. It really sunk in how hard it would have been being a
+new prisoner arriving in the winter, being given only summer clothes and made to
+stand out in the yard for 24 hours, not being allowed to move. I'm not surprised
+by how many died on their first night there.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13574729685/in/set-72157643245435323" title="Frozen puddle by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3824/13574729685_1de76ae3d8_c.jpg" width="800" height="601" alt="Frozen puddle"></a>
 
-misty rain as the sun set was freezing cold, but appropriate for the venue.
-really sunk in how hard it would have been being a prisoner given only summer
-clothes and made to stand out in the yard for 24 hours, not moving, on arrival
 
-gluhwine seller on the exit was a live saver!
+After leaving the camp I walked past a gluhwein seller not far down the road
+who was an absolute lifesaver. There's nothing like a hot, alcoholic beverage to
+warm your chilled bones.
 
-moved out of the nicoles place as they had a friend coming to stay, sad to be
-leaving, there awesome people. so friendly and welcoming. little nicole is
-bursting with an odd sort of positivity, so even at the end of a shitty day she
-was still enthusiastic, but not in the "look on the bright side" way, more in
-the "fuck that fuckface, and have a great day" way
+It was about this time that I had to move out from the Nicoles place as they had a friend coming to stay for Thanksgiving. I was sad to be
+leaving, they're both really lovely people. They made me feel right at home
+while I was there with them, so welcoming and friendly.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13576145783/in/set-72157643245435323" title="Me and the two Nicoles, hiding out behind a tea fort by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2835/13576145783_14b4d46382_c.jpg" width="765" height="800" alt="Me and the two Nicoles, hiding out behind a tea fort"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13576132425/in/set-72157643245435323" title="Nicole and Nicole are lovely people by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3798/13576132425_d19510e3d9_c.jpg" width="800" height="601" alt="Nicole and Nicole are lovely people"></a>
+Random fact about Nicole and Nicole is they like tea, and own enough of it to build a
+tea-fort.
 
-moved to a hostel which was almost completely full of australians, aside from
-the one staff member there.
-
-erotic museum, sort of dull, oldest sex shop in the world, one floor about the
-owner, 1 floor of drawings and what looked like kitch holiday souvineers
+I moved to a hostel which had great reviews online, but turned out was almost
+solely inhabited by very blokey Australian guys, aside from the one staff member
+there who was English I think and very camp. I felt pretty out of place to put
+it nicely.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13574866713/in/set-72157643245435323" title="Beate Uhse Erotic Museum by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5278/13574866713_2ab2331733_c.jpg" width="800" height="601" alt="Beate Uhse Erotic Museum"></a>
 
-burgermeister, deliciously good.
+I went and had a look at an erotic museum, part of the oldest sex shop in the
+world: Beate Uhse. It seemed like there was a lot of potential to have a very
+interesting museum but I found the place sort of dull. One of the two floors was
+almost solely about the woman who owned it, and the other floor was full of
+drawings and things that you could have told me were kitsch holiday souvenirs
+and I wouldn't have blinked.
 
-back to the nicoles place the next night for thanksgivukah. lovely to see them
-again and meet some of their friends. even met a girl also from australia, also
-born in wagga wagga, also moved away at a young age. what are the odds?
+<a href="http://www.flickr.com/photos/lucasthenomad/13576132425/in/set-72157643245435323" title="Nicole and Nicole are lovely people by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3798/13576132425_d19510e3d9_c.jpg" width="800" height="601" alt="Nicole and Nicole are lovely people"></a>
 
-lots of delicious vegitarian food and super sweet deserts, pumpkin cheesecake?
+Having only just left the Nicoles place, I was invited back the next night to
+take part in their Thanksgivukah celebrations, combining Thanksgiving and
+Hanukkah. The food  was delicious, mostly vegetarian or vegan, and the deserts
+were sickeningly sweet!  It was nice to meet some of their friends, one of whom
+was an Australian girl who was also born in Wagga Wagga (the funnily named town
+I was born in), and also moved away at a very young age. What are the odds?
 
-met up with Harmen again
 
-ddr musuem. great museum, although it needs a bigger space. incredibly packed
-for a museum, and then lots of stuff hidden behinds doors which were awkward to
-open without blocking someone elses view. one really neat aspect was the east
-german apparetment recreation, complete with bugs you could listen to from
-another room.
+I got an email from Harmen that he was back in Berlin again so we met up and
+visited the DDR museum, a museum about how things were in East Germany during
+the communist era. It was a great exhibition, but it's crying out for a bigger
+space. The exhibition is overflowing with stuff to show so much so that half of
+it is hidden behind little flaps or in draws that you pull out, which isn't
+really compatible with having the place so packed full of people that there's no
+room to open the exhibitions. Hopefully the popularity will lead to them
+thinking about a bigger venue.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13574951913/in/set-72157643245435323" title="Me in a Trabant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7361/13574951913_4fec5217ce_c.jpg" width="800" height="601" alt="Me in a Trabant"></a>
 
-went to brew baker, pumkin ale, ipa, super sweet dark beer, inside a really nice
-looking little indoor market.
+One really neat thing there was the recreation of the inside of an East
+German apartment, complete with hidden bugs that you could listen to from
+another room in the museum.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13575388144/in/set-72157643245435323" title="Cheers Harmen! by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3745/13575388144_018a2b7751_c.jpg" width="800" height="601" alt="Cheers Harmen!"></a>
 
-couch surfing with amber. nice girl, spacy. mikeller pop up bar
+After the museum we went to to a brew pub called Brew Baker, that I'd been told
+had an amazing pumpkin ale on a special brew, a style that I'd never tried
+before. The pumpkin ale was alright, but the IPA and a super sweet dark beer
+they also had were my favourites. It was located inside a really nice looking
+little indoor market.
 
-go otu for breakfast at a place called melbourne canteen, then head to spreepark
-(other blog post [blogged about here](http://www.lucasthenomad.com/2013/12/05/spreepark-Berlin)
+<a href="https://www.flickr.com/photos/lucasthenomad/11224583626" title="Collapsed bridge in front of the wheel by Lucas Parry, on Flickr"><img src="https://farm3.staticflickr.com/2853/11224583626_70108cfed5_c.jpg" width="601" height="800" alt="Collapsed bridge in front of the wheel"></a>
 
-go out for japanese and then go to open mic night
-
-went to charlottenburg schloss, but it was monday so the building was closed.
-explored the gardens, beautiful light frosting on the parts in the shade
+It was around this time I went and spent a day exploring Spreepark, an old
+abandoned theme park that in a pretty derelict state that I [blogged about
+earlier here](http://www.lucasthenomad.com/2013/12/05/spreepark-Berlin). Just
+recently I saw [this
+article](http://www.smithsonianmag.com/smart-news/berlin-just-bought-abandoned-theme-park-180950287/)
+saying that the city of Berlin has now bought the park, so I may have gotten
+very lucky getting to see it before it gets redeveloped into something else.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13575101705/in/set-72157643245435323" title="Charlottenburg Palace by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3828/13575101705_f688cbbd87_c.jpg" width="800" height="601" alt="Charlottenburg Palace"></a>
 
+One morning I tried to go and see Schloss Charlottenburg, a huge palace now used
+as a museum, but I didn't think about the fact it was Monday so the building was
+closed. I got to explore the gardens though, which were really pretty.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13575266765/in/set-72157643245435323" title="Charlottenburg Palace gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7113/13575266765_a2c54864c0_c.jpg" width="800" height="601" alt="Charlottenburg Palace gardens"></a>
+
+There was a lovely light frosting on the parts of the very neatly manicured
+garden that were in the shade which gave a lovely effect.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13575465633/in/set-72157643245435323" title="Charlottenburg Palace gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7233/13575465633_0a3d226a0e_c.jpg" width="800" height="601" alt="Charlottenburg Palace gardens"></a>
 
-amazing pork knuckle, random 20% discount, tipped it right back again
-
-fleece for edinburgh
-
-back to the generator hostel where it started exploring xmas market at alexander
-platz. light a huge rural show, lights and rides. lots of delicious food and
-gluhwein. regular stuff, with a shot of spirits or schapes, eierpunsch (yellow
-and creamy like egg nog, super sweet, with whipped cream on the top). even
-gluhbeir which was rich and sweet. ate some tasty shredded pork, and a bag of
-donut hole things. felt sick from all the sweet stuff.
+I spent my last few evenings in Berlin venturing around to various Christmas
+markets. At home I've felt jaded about Christmas for many years, but there was
+something about Christmas in Berlin that got through to.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13575685933/in/set-72157643245435323" title="Christmas Markets by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7378/13575685933_404c26c7ae_c.jpg" width="800" height="450" alt="Alexanderplatz Christmas Markets"></a>
 
+For once it didn't feel like a giant event organised by big companies to sell
+more shit. There was great food, tasty beverages, rides and amusements and most
+importantly there were people having a good time. Contrast that to my image of
+Christmas back home: overcrowded shopping malls full of people who don't want to
+be there, and it's easy to see why I prefer the way Berlin does it.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13576063984/in/set-72157643245435323" title="Gluhwein! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7368/13576063984_d6d4128944_c.jpg" width="800" height="601" alt="Gluhwein!"></a>
+
+The first markets I went to was the huge one they have near Alexanderplatz,
+which was kind of like a big show in a country town.  There were loads of places
+selling gluhwein; you could get the regular stuff, optionally with a shot of
+spirits or schnapps, or eierpunsch, which is yellow and creamy like eggnog,
+super sweet and with whipped cream on top. They even had gluhbier, spiced beer
+served warm that was rich and a little sweet.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13576186964/in/set-72157643245435323" title="Christmas Markets by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3694/13576186964_b29f3390fb_c.jpg" width="800" height="601" alt="Alexanderplatz Christmas Markets"></a>
 
-Berlin wall memorial. bits of the multiple layers of wall, an old street cut off
-by the wall. rebuilt secition with both complete walls, guard tower and lights.
-viewing platform in the west letting you see into the east?
+I had some tasty shredded pork stuff for dinner, and a bag of "donut hole" type
+things for desert, and boy did I feel sick afterwards from eating all that sweet
+stuff.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13576273754/in/set-72157643245435323" title="Bergstraße, the last street still cut off by the Berlin wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3730/13576273754_865530b401_c.jpg" width="800" height="601" alt="Bergstraße, the last street still cut off by the Berlin wall"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13576308664/in/set-72157643245435323" title="Me and the wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3756/13576308664_0f9c9a2677_c.jpg" width="800" height="450" alt="Me and the wall"></a>
+I spent my last day  at the Berlin Wall memorial. There are fragments of the
+multiple layers of wall, and there is an street that the wall still crosses
+which is the last street still cut off by the wall today.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13576371664/in/set-72157643245435323" title="Deadzone through a crack in the wall by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7348/13576371664_0933a8fc86_c.jpg" width="800" height="601" alt="Deadzone through a crack in the wall"></a>
 
+There's also a section that has been rebuilt that had both complete walls, a
+guard tower and lights, giving you a much better feeling how it would be felt to
+be trapped in East Germany during the Soviet era.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13576109973/in/set-72157643245435323" title="Wall reconstuction as seen from the viewing platform by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3819/13576109973_71720c6006_c.jpg" width="800" height="601" alt="Wall reconstuction as seen from the viewing platform"></a>
 
-buildings along the border with doors on both sides. eventually bricked up the
-west, evicted the people, demolished. old metro station were the trains went
-under east Berlin center that got bricked up and abandoned, but now in use
+There's also a viewing tower built so you can get a more elevated view of the
+whole thing.
 
-move christmas markets, pranzlaurberg, charlotenburg. much less fun-parky, and a
-better range of food and stuff. lots of sweedish and finland stalls, clothes and
-nicknacks. epic roast dinner, then a huge hungarian donut thing
+<a href="http://www.flickr.com/photos/lucasthenomad/13576308664/in/set-72157643245435323" title="Me and the wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3756/13576308664_0f9c9a2677_c.jpg" width="800" height="450" alt="Me and the wall"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13576227415/in/set-72157643245435323" title="Swinging Barbecue by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7397/13576227415_9b6456df0d_c.jpg" width="800" height="601" alt="Swinging Barbecue"></a>
+There were some interesting stories about buildings that were right along the
+border, that had doors opening both into East and West Berlin, allowing the
+owners access to both sides. Eventually the West German side was bricked up to
+stop people escaping via these houses, then the people were evicted, and finally
+the buildings were torn down.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576059895/in/set-72157643245435323" title="Bernauer Straße by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7390/13576059895_af1afc3e82_c.jpg" width="601" height="800" alt="Bernauer Straße Station"></a>
+
+West Berlin also had the underground train network, parts of which passed
+through under East Berlin city centre, but to stop people escaping through the
+metro tunnels the stations in East Berlin were bricked up and abandoned.
+Bernauer Straße station was one such station, but you wouldn't know it today.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576227415/in/set-72157643245435323" title="Swinging Barbecue by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7397/13576227415_9b6456df0d_c.jpg" width="800" height="601" alt="Swinging Barbecue at PrenzlauerBerg"></a>
+
+My last night in Berlin I hit a few more of the more traditional style Christmas
+markets at PrenzlauerBerg and Charlottenburg. These ones were far less fun-park
+like and had even more variety in food and handicrafts. PrenzlauerBerg had a
+strong showing of Swedish and Finnish stalls with their own takes on Gluhwein.
+There was also some huge BBQs where the grill was suspended by chains above the
+coals, slowly swinging and turning. I'm not sure if it had a functional purpose
+but it looked cool!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13576305803/in/set-72157643245435323" title="Charlottenburg Palace Christmas Market by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3798/13576305803_c78197835f_c.jpg" width="800" height="601" alt="Charlottenburg Palace Christmas Market"></a>
 
-off to the airport to fuly to barcelona
+The Charlottenburg markets were out the front of Charlottenburg Palace, with
+lots and lots of food places. I had myself an epic roast dinner, then a huge
+Hungarian donut thing before stumbling home to my hostel to get ready for my
+flight the next morning to Spain.
